--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -170,3 +170,10 @@ Abgerufen am 27. September 2015}
 	editor = {Glassner, Andrew S.},
 	year = {1989}
 }
+
+@article{_collins_2015,
+	title = {Collins {English} {Dictionary} - {Complete} \& {Unabridged} 10th {Edition}},
+	url = {http://dictionary.reference.com/browse/foldback},
+	month = oct,
+	year = {2015}
+}
