Fix citation issues: missing author, wrong type

--- a/doc/inc/60/63_rendering_implicit_surfaces.tex
+++ b/doc/inc/60/63_rendering_implicit_surfaces.tex
@@ -121,12 +121,15 @@ Strahles:
     d = |r_{\bm{n}} - r_{0}|
 \end{gather}
 
-wobei $\delta$ ein so genannter ``dept-cueing'' (oder auch ``foldback'',
-``a process for returning a signal to a performer
-instantly''~\cite{_collins_2015}) Exponent und $\alpha$ ein empirischer
-Anteil, welcher die Tiefenauflösung des Objektes definiert, ist.
+wobei $\delta$ ein so genannter ``depth-cueing''-Exponent
+(``depth-cueing'' oder auch ``foldback'', ``a process for returning a
+signal to a performer
+instantly''~\cite{liam_collins_sons_&_co._ltd._collins_2015}) und
+$\alpha$ ein empirischer Anteil, welcher die Tiefenauflösung des
+Objektes definiert,
+ist.
 Details dazu finden sich unter~\cite{hart_ray_1989}[S. 293, Abschnitt
-4.2 --- `Clarity'].
+4.2 --- ``Clarity''].
 
 Es folgt also:
 
