--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -171,9 +171,10 @@ Abgerufen am 27. September 2015}
 	year = {1989}
 }
 
-@article{_collins_2015,
+@misc{liam_collins_sons_&_co._ltd._collins_2015,
 	title = {Collins {English} {Dictionary} - {Complete} \& {Unabridged} 10th {Edition}},
 	url = {http://dictionary.reference.com/browse/foldback},
+	author = {{liam Collins Sons \& Co. Ltd.}},
 	month = oct,
 	year = {2015}
 }
