Do not add 'main' glossaries for now as there are none at the moment

--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -167,7 +167,7 @@
 %
 % for futher informations go to http://ewus.de/tipp-1029.html
 %---------------------------------------------------------------------------
-\usepackage[nonumberlist]{glossaries}
+\usepackage[nonumberlist,nomain]{glossaries}
 %\usepackage[xindy,nonumberlist]{glossaries}
 \input{inc/static/glossary}
 \makeglossaries{}
