Fix labels for figures, use alg: label for algorithm instead of fig: label

--- a/doc/inc/50/51_illumination_models.tex
+++ b/doc/inc/50/51_illumination_models.tex
@@ -28,10 +28,10 @@ Dies ist dadurch bedingt, dass die traditionell verwendeten Algorithmen zur Bere
 
 Als Beispiel für ein lokales Beleuchtungsmodell dient das Phong-Beleuchtungsmodell, welches von Bui-Tong Phong entwickelt wurde.
 
-\begin{figure}[H]\label{fig:phong_illustration}
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.4\textwidth]{img/phong_illustration.png}
-    \caption{Illustration des Phong-Beleuchtungsmodelles\protect\footnotemark}
+    \caption{Illustration des Phong-Beleuchtungsmodelles\protect\footnotemark}\label{fig:phong_illustration}
 \end{figure}
 \footnotetext{Eigene Darstellung mittels Geogebra, angelehnt an~\cite{foley_computer_1996}[Kapitel 16, Seite 731, Abbildung 16.12]}
 
@@ -258,10 +258,10 @@ trifft~\cite{whitted_improved_1980}[S.  345].\\
 Es handelt sich dabei also um ein rekursives Verfahren und wird daher
 teilweise auch rekurisves Ray Tracing genannt.
 
-\begin{figure}[H]\label{fig:ray_tracing_illustration}
+\begin{figure}[H]
     \centering
     \includegraphics[width=1.0\textwidth]{img/ray_tracing_illustration.png}
-    \caption{Illustration des Ray Tracing Verfahrens\protect\footnotemark}
+    \caption{Illustration des Ray Tracing Verfahrens\protect\footnotemark}\label{fig:ray_tracing_illustration}
 \end{figure}
 \footnotetext{Eigene Darstellung mittels Geogebra, angelehnt an~\cite{glassner_introduction_1989}[Kapitel 2, Seite 16, Abbildung 11; Piktogramm Auge erstellt von ``Icomoon'' auf www.flaticon.com; Piktogramm Glühbirne erstellt von ``Simpleicon'' auf www.flaticon.com;]}
 \todo[inline]{Explain illustration~\ref{fig:ray_tracing_illustration}}
