--- a/doc/inc/60/62_description_implicit_surfaces.tex
+++ b/doc/inc/60/62_description_implicit_surfaces.tex
@@ -211,7 +211,7 @@ Oberfläche eines Objkektes trifft. Diese Folge bildet den Kern des Algorithmus
 zur Darstellung von geometrisch definierten, impliziten Oberflächen.
 
 \begin{lstlisting}[language=Python,caption={Eine abstrakte Umsetzung des Sphere
-        Tracings\protect\footnotemark.},label={fig:sphere_tracing},captionpos=b,emph={sphere_trace}]
+        Tracings\protect\footnotemark.},label={alg:sphere_tracing},captionpos=b,emph={sphere_trace}]
 def sphere_trace():
     ray_distance          = 0
     estimated_distance    = 0
