Add an (rather theoretical) explanation of how the rendering of implicit surfaces gets done

--- a/doc/inc/60/63_rendering_implicit_surfaces.tex
+++ b/doc/inc/60/63_rendering_implicit_surfaces.tex
@@ -154,7 +154,14 @@ unzureichende Genauigkeit liefert.
 
 \subsection{Rendering}
 \label{sec:rendering_implicit_surfaces_Rendering}
-\todo[inline]{Explain rendering}
+
+Um implizite Oberflächen zu rendern werden die in
+Abschnitt~\ref{subsec:implicit_surfaces_primitives} angegebenen
+Primitiven verwendet.
+
+Zum eigentlichen Rendern wird der Algorithmus~\ref{alg:sphere_tracing}
+mit dem unter Abschnitt~\ref{sec:rendering_implicit_surfaces_lighting}
+angegebenen Beleuchtungsmodell angwendet.
 
 \subsection{Schatten}
 \label{sec:rendering_implicit_surfaces_shadows}
