Introduce prototype chapter, change numbering of conclusion due to new introduced chapter

--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -293,7 +293,8 @@
 \include{inc/40_procedure}
 \include{inc/50_theoretical_background}
 \include{inc/60_surfaces}
-\include{inc/70_conclusion}
+\include{inc/70_prototype}
+\include{inc/80_conclusion}
 %---------------------------------------------------------------------------
 
 % Glossary
