Add TODOs upon last meeting with Mr. Fuhrer

--- a/doc/inc/50/51_illumination_models.tex
+++ b/doc/inc/50/51_illumination_models.tex
@@ -35,6 +35,8 @@ Als Beispiel für ein lokales Beleuchtungsmodell dient das Phong-Beleuchtungsmod
 \end{figure}
 \footnotetext{Eigene Darstellung mittels Geogebra, angelehnt an~\cite{foley_computer_1996}[Kapitel 16, Seite 731, Abbildung 16.12]}
 
+\todo[inline]{Scale illustration down, normalize vectors to same length}
+
 Es beschreibt die reflektierte (Licht-) Intensität als Zusammensetzung aus der ambienten, der diffusen und der ideal spiegelnden Reflexion einer Oberfläche:
 
 \begin{gather}
@@ -264,7 +266,8 @@ teilweise auch rekurisves Ray Tracing genannt.
     \caption{Illustration des Ray Tracing Verfahrens\protect\footnotemark}\label{fig:ray_tracing_illustration}
 \end{figure}
 \footnotetext{Eigene Darstellung mittels Geogebra, angelehnt an~\cite{glassner_introduction_1989}[Kapitel 2, Seite 16, Abbildung 11; Piktogramm Auge erstellt von ``Icomoon'' auf www.flaticon.com; Piktogramm Glühbirne erstellt von ``Simpleicon'' auf www.flaticon.com;]}
-\todo[inline]{Explain illustration~\ref{fig:ray_tracing_illustration}}
+\todo[inline]{Explain illustration~\ref{fig:ray_tracing_illustration}, provide
+a better resolution, use bigger font, use same length for vectors}
 \todo[inline]{Explain transmission and refraction}
 \todo[inline]{Add an (sphere) example, explain basic terminology (illum.\ and
     shadow rays, aliasing and so on)}
