Catch up with version history including today

--- a/doc/inc/static/versions.tex
+++ b/doc/inc/static/versions.tex
@@ -50,4 +50,9 @@
         impliziten Oberflächen, Einführung Kapitel über die Umsetzung eines
         Prototypen~\ref{chap:prototype}
     }
+    \vhEntry{0.11}{24.10.2015}{SO}{Umstrukturierung des Dokumentes, Anpassung
+        der Dokumentvorlage, Nachführen der Versionshistorie, Ausführen der
+        Meeting Minutes vom 18.10.2015, Erstellen der Vorlage für Meeting
+        Minutes vom 25.10.2015
+    }
 \end{versionhistory}
