Update meeting minutes from 25th of october to have complete sentences, add TODOs, prepare meeting minutes for 2nd of november

--- a/doc/inc/10_introduction.tex
+++ b/doc/inc/10_introduction.tex
@@ -18,3 +18,5 @@ Mit schnell ist dabei die Zeit gemeint, die benötigt wird um ein einzelnes Bild
 Im Rahmen der Weiterentwicklung der Computer und vor allem durch die Weiterentwicklung der Grafikkarten (GPUs), ist Ray Tracing jedoch wieder in den Fokus der Darstellung von Szenen in Echtzeit gerückt.
 
 Diese Projektarbeit stellt ein spezielles Ray Tracing Verfahren zur Darstellung von Bildern in Echtzeit vor: Volume Ray Casting bzw. Sphere Tracing.
+
+\todo[inline]{Check and rewrite when finished with the rest of document}
