--- a/doc/inc/40_procedure.tex
+++ b/doc/inc/40_procedure.tex
@@ -49,6 +49,7 @@ Die Phasen der Erarbeitung der theoretischen Grundlagen sowie die Erstellung der
     \end{ganttchart}
     \caption{Zeitplan; Der Titel stellt Jahreszahlen, der Untertitel Semesterwochen dar}
 \end{figure}
+\todo[inline]{Update schedule}
 
 \subsubsection{Projektstart}
 \label{subsubsec:kick_off}
