--- a/doc/inc/50/51_illumination_models.tex
+++ b/doc/inc/50/51_illumination_models.tex
@@ -77,7 +77,7 @@ wobei gilt:
     \item $k_{e}$:                  Exponent, welcher von der Rauheit bzw.
                                     Reflektion der Oberfläche abhängt
 \end{itemize}
-
+\todo[inline]{Explain $L_{i}$!}
 
 Meist wird der emissive Term bewusst weggelassen, da dieser meist eher für
 Spezialeffekte statt für die Beleuchtung ``normaler'' Objekte benutzt wird.
