--- a/doc/inc/70_prototype.tex
+++ b/doc/inc/70_prototype.tex
@@ -18,6 +18,8 @@ eingesetzt. Als Buildsystem kommt
 CMake~\footnote{\url{https://www.cmake.org}}, als Compiler
 clang~\footnote{\url{http://clang.llvm.org}} zum Einsatz.
 
+\todo[inline]{Use tabular format for describing components}
+
 \section{Architektur}
 \label{sec:architecture}
 
