--- a/doc/inc/static/versions.tex
+++ b/doc/inc/static/versions.tex
@@ -55,4 +55,8 @@
         Meeting Minutes vom 18.10.2015, Erstellen der Vorlage für Meeting
         Minutes vom 25.10.2015
     }
+    \vhEntry{0.12}{30.10.2015}{SO}{Nachführen der Versionshistorie, Ausführen der
+        Meeting Minutes vom 25.10.2015, Erstellen der Vorlage für Meeting
+        Minutes vom 02.11.2015
+    }
 \end{versionhistory}
