Introduce new bibliography entries needed for chapters

--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -178,3 +178,118 @@ Abgerufen am 27. September 2015}
 	month = oct,
 	year = {2015}
 }
+
+@misc{wikipedia_the_free_encyclopedia_boost_2015,
+	title = {Boost ({C}++-{Bibliothek})},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://de.wikipedia.org/w/index.php?title=Boost_(C%2B%2B-Bibliothek)&oldid=146313866},
+	abstract = {Boost (englisch Boost C++ Libraries) ist eine freie C++-Bibliothek, die aus einer Vielzahl von portablen Unterbibliotheken besteht. Die Unterbibliotheken dienen unterschiedlichsten Aufgaben von Algorithmen auf Graphen über Metaprogrammierung bis hin zu Speicherverwaltung.
+Es können jederzeit neue Bibliotheken zur Eingliederung in Boost vorgeschlagen werden, diese müssen jedoch einen aufwendigen Review-Prozess durchlaufen. Teile von Boost wurden in einen so genannten technischen Bericht (technical report) des Standardisierungskomitees für C++ übernommen und später in die Sprache C++ integriert (ISO/IEC 14882:2011).
+↑ Boost Version History
+↑ Boost Software License: Text der Version 1.0, Erläuterungen zur Lizenz
+↑ Review Prozess für Boost-Bibliotheken
+↑ C++ Technical Report 1 (PDF-Datei; 1,37 MB)},
+	language = {de},
+	urldate = {2015-10-31},
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = sep,
+	year = {2015},
+	note = {Page Version ID: 146313866},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/G22W4H43/index.html:text/html}
+}
+
+@misc{wikipedia_the_free_encyclopedia_c++_2015,
+	title = {C++},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://de.wikipedia.org/w/index.php?title=C%2B%2B&oldid=147529052},
+	abstract = {C++ ist eine von der ISO genormte Programmiersprache. Sie wurde ab 1979 von Bjarne Stroustrup bei AT\&T als Erweiterung der Programmiersprache C entwickelt. C++ ermöglicht sowohl die effiziente und maschinennahe Programmierung als auch eine Programmierung auf hohem Abstraktionsniveau. Der Standard definiert auch eine Standardbibliothek, zu der verschiedene Implementierungen existieren.},
+	language = {de},
+	urldate = {2015-10-31},
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = oct,
+	year = {2015},
+	note = {Page Version ID: 147529052},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/2ZE7BBG7/index.html:text/html}
+}
+
+@misc{wikipedia_the_free_encyclopedia_opengl_2015,
+	title = {{OpenGL}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://de.wikipedia.org/w/index.php?title=OpenGL&oldid=146904140},
+	abstract = {OpenGL (Open Graphics Library; deutsch Offene Grafikbibliothek) ist eine Spezifikation für eine plattform- und programmiersprachenunabhängige Programmierschnittstelle zur Entwicklung von 2D- und 3D- Computergrafikanwendungen. Der OpenGL-Standard beschreibt etwa 250 Befehle, die die Darstellung komplexer 3D-Szenen in Echtzeit erlauben. Zudem können andere Organisationen (zumeist Hersteller von Grafikkarten) proprietäre Erweiterungen definieren.
+Die Implementierung des OpenGL-API erfolgt in der Regel durch Systembibliotheken, auf einigen Betriebssystemen auch als Teil der Grafikkarten-Treiber. Diese führen entsprechend Befehle der Grafikkarte aus, insbesondere müssen auf der Grafikkarte nicht vorhandene Funktionen durch die CPU emuliert werden.},
+	language = {de},
+	urldate = {2015-10-31},
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = oct,
+	year = {2015},
+	note = {Page Version ID: 146904140},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/KRDACBK3/index.html:text/html}
+}
+
+@misc{wikipedia_the_free_encyclopedia_glfw_2015,
+	title = {{GLFW}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=GLFW&oldid=687716464},
+	abstract = {GLFW is a lightweight utility library for use with OpenGL. It provides programmers with the ability to create and manage windows and OpenGL contexts, as well as handle joystick, keyboard and mouse input.},
+	language = {en},
+	urldate = {2015-10-31},
+	journal = {Wikipedia, the free encyclopedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = oct,
+	year = {2015},
+	note = {Page Version ID: 687716464},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/F776J6DQ/index.html:text/html}
+}
+
+@misc{wikipedia_the_free_encyclopedia_opengl_2015-1,
+	title = {{OpenGL} {Extension} {Wrangler} {Library}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=OpenGL_Extension_Wrangler_Library&oldid=680716273},
+	abstract = {The OpenGL Extension Wrangler Library (GLEW) is a cross-platform C/C++ library that helps in querying and loading OpenGL extensions. GLEW provides efficient run-time mechanisms for determining which OpenGL extensions are supported on the target platform. All OpenGL extensions are exposed in a single header file, which is machine-generated from the official extension list. GLEW is available for a variety of operating systems, including Windows, Linux, Mac OS X, FreeBSD, IRIX, and Solaris.
+GLEW is distributed under modified BSD licenses, and the header file generator is under the GNU GPL.},
+	language = {en},
+	urldate = {2015-10-31},
+	journal = {Wikipedia, the free encyclopedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = sep,
+	year = {2015},
+	note = {Page Version ID: 680716273},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/WBQNEUTX/index.html:text/html}
+}
+
+@misc{wikipedia_the_free_encyclopedia_cmake_2015,
+	title = {{CMake}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://de.wikipedia.org/w/index.php?title=CMake&oldid=146167565},
+	abstract = {CMake (cross-platform make) ist ein plattformunabhängiges Programmierwerkzeug für die Entwicklung und Erstellung von Software.
+↑ www.cmake.org CMake Participants
+↑ CMake 3.3.2 available for download. Abgerufen am 18. September 2015.
+↑ Ohloh Analysis Summary - CMake. Ohloh. Abgerufen am 25. Dezember 2009.},
+	language = {de},
+	urldate = {2015-10-31},
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = sep,
+	year = {2015},
+	note = {Page Version ID: 146167565},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/B5NIENQI/index.html:text/html}
+}
+
+@misc{wikipedia_the_free_encyclopedia_gnu_2015,
+	title = {{GNU} {Compiler} {Collection}},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://de.wikipedia.org/w/index.php?title=GNU_Compiler_Collection&oldid=147327365},
+	abstract = {GCC ist der Name der Compiler-Suite des GNU-Projekts. GCC stand ursprünglich für GNU C Compiler. Da GCC heute aber außer C noch einige andere Programmiersprachen übersetzen kann, hat GCC inzwischen die Bedeutung GNU Compiler Collection erhalten (englisch für GNU-Compilersammlung). Das Kommando gcc (in Kleinbuchstaben) steht weiterhin für den C-Compiler.},
+	language = {de},
+	urldate = {2015-10-31},
+	journal = {Wikipedia},
+	author = {{Wikipedia, the free encyclopedia}},
+	month = oct,
+	year = {2015},
+	note = {Page Version ID: 147327365},
+	file = {Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/NWSUCSNN/index.html:text/html}
+}
